@@ -10,7 +10,7 @@
 
 @implementation NSString (WebKitExtras)
 
-- (void)drawString:(NSString *)string atPoint:(NSPoint)point font: (NSFont *)font textColor:(NSColor *)textColor;
+- (void)_web_drawString:(NSString *)string atPoint:(NSPoint)point font: (NSFont *)font textColor:(NSColor *)textColor;
 {
     if (string == nil) {
         return;
@@ -35,7 +35,7 @@
     free(buffer);
 }
 
-- (float)widthForString:(NSString *)string font: (NSFont *)font
+- (float)_web_widthForString:(NSString *)string font: (NSFont *)font
 {
     if (string == nil)
         return 0;
